[package]
name = "rusk"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.102"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde = "1.0.228"
serde_json = "1.0.145"
libc = "0.2.177"
tokio = { version = "1.48.0", features = ["io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tower-lsp = "0.20.0"
